--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,8 +1,5 @@
 name: GitHub Actions Demo
-on:
-  push:
-      paths:
-        - 'chapter_1/'
+on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
